[metadata]
name = dropbox-sync-case
version = 1.0
author = Scott Moore
description = Sync the capitalisation of Dropbox files and folders
long_description = file: README.md, LICENSE
keywords = dropbox, sync, capitalisation
license = MIT

[options]
py_modules =
    cli
    core
install_requires =
    click
    dropbox
include_package_data = True

[options.entry_points]
console_scripts =
    dropbox-sync-case = cli:cli